docs: document compatibility level and Java-based parity regression suite